--- a/trello-frontend/src/components/Lists/Title.css
+++ b/trello-frontend/src/components/Lists/Title.css
@@ -17,3 +17,20 @@
     cursor: pointer;
 }
 
+
+
+.delete-btn{
+    width: 100%;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 187, 125);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    color: white;
+    cursor: pointer;
+}
+
