--- a/trello-frontend/src/components/NavBar/Headerbar.css
+++ b/trello-frontend/src/components/NavBar/Headerbar.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .display{
@@ -32,4 +33,36 @@
 .btn-container .MuiSvgIcon-root{
     font-size: 20px;
     margin-right: 10px;
+}
+
+.bottom-bar{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    display: none;
+}
+
+.bottom-bar button{
+    flex-basis: 50%;
+    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 187, 125);
+    cursor: pointer;
+}
+
+@media(max-width: 900px){
+    .headerContainer{
+        flex-direction: column;
+    }
+    .bottom-bar{
+        display: flex;
+    }
+    .btn-container{
+        display: none;
+    }
 }
