--- a/trello-frontend/src/components/NavBar/Headerbar.css
+++ b/trello-frontend/src/components/NavBar/Headerbar.css
@@ -36,18 +36,20 @@
 }
 
 .bottom-bar{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     left: 0;
     display: flex;
     align-items: center;
     display: none;
+    z-index: 999;
+    margin-top: 100vh;
 }
 
 .bottom-bar button{
     flex-basis: 50%;
-    padding: 6px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
